# FViZ

./: .gitignore  FVIZ.pro  FVIZ.pro.user.ab14ba8.4.8-pre1  FVIZ.pro.user.e08ce37.20  FVIZ.pro.user.e27afc0  FVIZ.pro.user.f3b222c  FVIZ.pro.user.f781dd2  Main.qml  MainForm.ui.qml  Ui_form.py  about.cpp  about.ui  addelement.cpp  addelement.h  addelement.ui  addsysgroup.cpp  addsysgroup.h  addsysgroup.ui  canvas.dev.js  canvas.html  cell.h  commands.cpp  commands.h  fizitem.cpp  fizitem.h  general_settings.cpp  general_settings.h  general_settings.ui  graphview.cpp  graphview.h  index.html  law.h  lawsgroup.cpp  lawsgroup.h  lawssettings.cpp  lawssettings.h  lawssettings.ui  listoflaws.cpp  listoflaws.h  listoflaws.ui  (+23 more)
.github/workflows/: cpp.yml  gtest-ci.yml
Tests/: CMakeLists.txt  Tests.pro  gtest_dependency.pri  main.cpp  sysgroup_test.h
canvas/: canvas.html  canvas.js  katex.dev.js  katex.html
include/: cell.h  color.h  sysgroup.h  system.h
katex/: index.html  katex.css  katex.js  katex.qrc
mkmok/: mainwindowdvs.cpp  mainwindowdvs.h  mainwindowdvs.ui  mkmok.pro
source/: sysgroup.cpp
src/: cell.cpp  main.cpp  sysgroup.cpp  system.cpp
